<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="omrade"
        android:enabled="true"
        android:icon="@drawable/ic_omrade"
        android:shortcutShortLabel="@string/shortcut_omrade_short_label"
        android:shortcutLongLabel="@string/shortcut_omrade_long_label"
        android:shortcutDisabledMessage="@string/shortcut_omrade_disabled_message">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.humhub.app"
            android:targetClass="com.humhub.app.MainActivity">
            <extra android:name="shortcut" android:value="omrade" />
        </intent>
    </shortcut>
    <shortcut
        android:shortcutId="community"
        android:enabled="true"
        android:icon="@drawable/ic_community"
        android:shortcutShortLabel="@string/shortcut_community_short_label"
        android:shortcutLongLabel="@string/shortcut_community_long_label"
        android:shortcutDisabledMessage="@string/shortcut_community_disabled_message">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.humhub.app"
            android:targetClass="com.humhub.app.MainActivity">
            <extra android:name="shortcut" android:value="community" />
        </intent>
    </shortcut>

    <shortcut
        android:shortcutId="inforisque"
        android:enabled="true"
        android:icon="@drawable/ic_inforisque"
        android:shortcutShortLabel="@string/shortcut_inforisque_short_label"
        android:shortcutLongLabel="@string/shortcut_inforisque_long_label"
        android:shortcutDisabledMessage="@string/shortcut_inforisque_disabled_message">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.humhub.app"
            android:targetClass="com.humhub.app.MainActivity">
            <extra android:name="shortcut" android:value="inforisque" />
        </intent>
    </shortcut>
</shortcuts>
